single_instance_public_ip/sg.tf
resource "aws_security_group" "sg_http" {
   name = "sg_http"
   vpc_id = "${aws_vpc.vpc-main.id}"

   ingress {
     cidr_blocks     = ["0.0.0.0/0"]
     from_port = 80
     to_port = 80
     protocol = "tcp"
   }

   egress {
     cidr_blocks     = ["0.0.0.0/0"]
     from_port = 0
     to_port = 0
     protocol = "-1"
   }
   tags = "${local.common_tags}"
 }

 resource "aws_security_group" "sg_ssh" {
    name = "sg_ssh"
    vpc_id = "${aws_vpc.vpc-main.id}"

    ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks     = ["0.0.0.0/0"]
    }

    egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks     = ["0.0.0.0/0"]
    }

    tags = "${local.common_tags}"
  }
